--- a/source/app/src/main/res/layout/activity_main.xml
+++ b/source/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,21 @@
             android:shadowRadius="1"
             android:shadowDx="2"
             android:shadowDy="2" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/how_to"
+            android:gravity="center"
+            android:fontFamily="sans-serif-light"
+            android:layout_marginTop="16dp"
+            android:textSize="16sp"
+            android:textColor="@android:color/white"
+            android:id="@+id/textView2"
+            android:shadowColor="#44000000"
+            android:shadowRadius="1"
+            android:shadowDx="2"
+            android:shadowDy="2" />
     </LinearLayout>
     </ScrollView>
 
